# videodocparser

./: .gitignore  Cargo.toml  README.md
docs/: SPECIFICATION.md
src/: document_builder.rs  frame_analyzer.rs  lib.rs  main.rs  ocr.rs  video_processor.rs
